crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__prompt-45-light-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃ write the docs page too, and link it from  |
|┃ @README.md                                 |
|┃                                            |
|┃ claude-main · opus · ask                   |
|╹▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀|
|                                             |
|┃ Write a prompt…                            |
|┃                                            |
|┃ claude-main · opus · ask                   |
|╹▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀|
|                                             |

 0   0..1   fg=#2f5bb7 bg=#f6f7f9
 0   1..2   fg=#1c1c1c bg=#f6f7f9
 0   2..3   fg=#1c1c1c bg=#f6f7f9 REVERSED
 0   3..45  fg=#1c1c1c bg=#f6f7f9
 1   0..1   fg=#2f5bb7 bg=#f6f7f9
 1   1..45  fg=#1c1c1c bg=#f6f7f9
 2   0..1   fg=#2f5bb7 bg=#f6f7f9
 2   1..45  fg=#1c1c1c bg=#f6f7f9
 3   0..1   fg=#2f5bb7 bg=#f6f7f9
 3   1..13  fg=#1c1c1c bg=#f6f7f9
 3  13..26  fg=#6b6f7a bg=#f6f7f9
 3  26..45  fg=#1c1c1c bg=#f6f7f9
 4   0..1   fg=#2f5bb7 bg=#ffffff
 4   1..45  fg=#f6f7f9 bg=#ffffff
 5   0..45  fg=#1c1c1c bg=#ffffff
 6   0..1   fg=#c6cad3 bg=#f6f7f9
 6   1..2   fg=#1c1c1c bg=#f6f7f9
 6   2..44  fg=#6b6f7a bg=#f6f7f9
 6  44..45  fg=#1c1c1c bg=#f6f7f9
 7   0..1   fg=#c6cad3 bg=#f6f7f9
 7   1..45  fg=#1c1c1c bg=#f6f7f9
 8   0..1   fg=#c6cad3 bg=#f6f7f9
 8   1..13  fg=#1c1c1c bg=#f6f7f9
 8  13..26  fg=#6b6f7a bg=#f6f7f9
 8  26..45  fg=#1c1c1c bg=#f6f7f9
 9   0..1   fg=#c6cad3 bg=#ffffff
 9   1..45  fg=#f6f7f9 bg=#ffffff
10   0..45  fg=#1c1c1c bg=#ffffff
