crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__request-100-light-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|│ ^ approval - Bash                                                                   asked 12s ago |
|│ $ rm -rf target/                                                                                  |
|│                                                                                                   |
|│   allow      deny                                                                 y allow  n deny |
|│                                                                                                   |
|                                                                                                    |
|│ ? question - docs                                                                                 |
|│ Which heading level for the API page?                                                             |
|│ escalated: exceeds authority                                                                      |
|│                                                                                                   |
|│  1 h2 under Reference                                                                             |
|│  2 h1, its own page                                                                               |
|│  enter or type an answer                                                                          |
|│                                                                                                   |
|                                                                                                    |
|                                                                                                    |

 0   0..1   fg=#b0307f bg=#f6f7f9
 0   1..2   fg=#1c1c1c bg=#f6f7f9
 0   2..12  fg=#b0307f bg=#f6f7f9 BOLD
 0  12..15  fg=#6b6f7a bg=#f6f7f9
 0  15..19  fg=#1c1c1c bg=#f6f7f9 BOLD
 0  19..86  fg=#1c1c1c bg=#f6f7f9
 0  86..99  fg=#6b6f7a bg=#f6f7f9
 0  99..100 fg=#1c1c1c bg=#f6f7f9
 1   0..1   fg=#b0307f bg=#f6f7f9
 1   1..100 fg=#1c1c1c bg=#f6f7f9
 2   0..1   fg=#b0307f bg=#f6f7f9
 2   1..100 fg=#1c1c1c bg=#f6f7f9
 3   0..1   fg=#b0307f bg=#f6f7f9
 3   1..2   fg=#1c1c1c bg=#f6f7f9
 3   2..11  fg=#ffffff bg=#2f5bb7 BOLD
 3  11..13  fg=#1c1c1c bg=#f6f7f9
 3  13..21  fg=#1c1c1c bg=#eceef2
 3  21..84  fg=#1c1c1c bg=#f6f7f9
 3  84..85  fg=#1c1c1c bg=#f6f7f9 BOLD
 3  85..93  fg=#6b6f7a bg=#f6f7f9
 3  93..94  fg=#1c1c1c bg=#f6f7f9 BOLD
 3  94..99  fg=#6b6f7a bg=#f6f7f9
 3  99..100 fg=#1c1c1c bg=#f6f7f9
 4   0..1   fg=#b0307f bg=#f6f7f9
 4   1..100 fg=#1c1c1c bg=#f6f7f9
 5   0..100 fg=#1c1c1c bg=#ffffff
 6   0..1   fg=#b0307f bg=#f6f7f9
 6   1..2   fg=#1c1c1c bg=#f6f7f9
 6   2..12  fg=#b0307f bg=#f6f7f9 BOLD
 6  12..15  fg=#6b6f7a bg=#f6f7f9
 6  15..19  fg=#1c1c1c bg=#f6f7f9 BOLD
 6  19..100 fg=#1c1c1c bg=#f6f7f9
 7   0..1   fg=#b0307f bg=#f6f7f9
 7   1..2   fg=#1c1c1c bg=#f6f7f9
 7   2..99  fg=#1c1c1c bg=#f6f7f9 BOLD
 7  99..100 fg=#1c1c1c bg=#f6f7f9
 8   0..1   fg=#b0307f bg=#f6f7f9
 8   1..2   fg=#1c1c1c bg=#f6f7f9
 8   2..99  fg=#6b6f7a bg=#f6f7f9
 8  99..100 fg=#1c1c1c bg=#f6f7f9
 9   0..1   fg=#b0307f bg=#f6f7f9
 9   1..100 fg=#1c1c1c bg=#f6f7f9
10   0..1   fg=#b0307f bg=#f6f7f9
10   1..3   fg=#1c1c1c bg=#f6f7f9
10   3..4   fg=#2f5bb7 bg=#f6f7f9 BOLD
10   4..100 fg=#1c1c1c bg=#f6f7f9
11   0..1   fg=#b0307f bg=#f6f7f9
11   1..2   fg=#1c1c1c bg=#f6f7f9
11   2..3   fg=#1c1c1c bg=#eceef2
11   3..4   fg=#2f5bb7 bg=#eceef2 BOLD
11   4..5   fg=#1c1c1c bg=#eceef2
11   5..21  fg=#1c1c1c bg=#eceef2 BOLD
11  21..99  fg=#1c1c1c bg=#eceef2
11  99..100 fg=#1c1c1c bg=#f6f7f9
12   0..1   fg=#b0307f bg=#f6f7f9
12   1..3   fg=#1c1c1c bg=#f6f7f9
12   3..8   fg=#2f5bb7 bg=#f6f7f9 BOLD
12   8..9   fg=#1c1c1c bg=#f6f7f9
12   9..26  fg=#6b6f7a bg=#f6f7f9
12  26..100 fg=#1c1c1c bg=#f6f7f9
13   0..1   fg=#b0307f bg=#f6f7f9
13   1..100 fg=#1c1c1c bg=#f6f7f9
14   0..100 fg=#1c1c1c bg=#ffffff
15   0..100 fg=#1c1c1c bg=#ffffff
