crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__request-45-dark-unicode.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|┃ △ approval · Bash            asked 12s ago |
|┃ $ rm -rf target/                           |
|┃                                            |
|┃   allow      deny          y allow  n deny |
|┃                                            |
|                                             |
|┃ ? question · docs                          |
|┃ Which heading level for the API page?      |
|┃ escalated: exceeds authority               |
|┃                                            |
|┃  1 h2 under Reference                      |
|┃  2 h1, its own page                        |
|┃  enter or type an answer                   |
|┃                                            |
|                                             |
|                                             |

 0   0..1   fg=#e879c6 bg=#181a20
 0   1..2   fg=#e6e6e6 bg=#181a20
 0   2..12  fg=#e879c6 bg=#181a20 BOLD
 0  12..15  fg=#7f8492 bg=#181a20
 0  15..19  fg=#e6e6e6 bg=#181a20 BOLD
 0  19..31  fg=#e6e6e6 bg=#181a20
 0  31..44  fg=#7f8492 bg=#181a20
 0  44..45  fg=#e6e6e6 bg=#181a20
 1   0..1   fg=#e879c6 bg=#181a20
 1   1..45  fg=#e6e6e6 bg=#181a20
 2   0..1   fg=#e879c6 bg=#181a20
 2   1..45  fg=#e6e6e6 bg=#181a20
 3   0..1   fg=#e879c6 bg=#181a20
 3   1..2   fg=#e6e6e6 bg=#181a20
 3   2..11  fg=#111216 bg=#7aa2f7 BOLD
 3  11..13  fg=#e6e6e6 bg=#181a20
 3  13..21  fg=#e6e6e6 bg=#21242c
 3  21..29  fg=#e6e6e6 bg=#181a20
 3  29..30  fg=#e6e6e6 bg=#181a20 BOLD
 3  30..38  fg=#7f8492 bg=#181a20
 3  38..39  fg=#e6e6e6 bg=#181a20 BOLD
 3  39..44  fg=#7f8492 bg=#181a20
 3  44..45  fg=#e6e6e6 bg=#181a20
 4   0..1   fg=#e879c6 bg=#181a20
 4   1..45  fg=#e6e6e6 bg=#181a20
 5   0..45  fg=#e6e6e6 bg=#111216
 6   0..1   fg=#e879c6 bg=#181a20
 6   1..2   fg=#e6e6e6 bg=#181a20
 6   2..12  fg=#e879c6 bg=#181a20 BOLD
 6  12..15  fg=#7f8492 bg=#181a20
 6  15..19  fg=#e6e6e6 bg=#181a20 BOLD
 6  19..45  fg=#e6e6e6 bg=#181a20
 7   0..1   fg=#e879c6 bg=#181a20
 7   1..2   fg=#e6e6e6 bg=#181a20
 7   2..44  fg=#e6e6e6 bg=#181a20 BOLD
 7  44..45  fg=#e6e6e6 bg=#181a20
 8   0..1   fg=#e879c6 bg=#181a20
 8   1..2   fg=#e6e6e6 bg=#181a20
 8   2..44  fg=#7f8492 bg=#181a20
 8  44..45  fg=#e6e6e6 bg=#181a20
 9   0..1   fg=#e879c6 bg=#181a20
 9   1..45  fg=#e6e6e6 bg=#181a20
10   0..1   fg=#e879c6 bg=#181a20
10   1..3   fg=#e6e6e6 bg=#181a20
10   3..4   fg=#7aa2f7 bg=#181a20 BOLD
10   4..45  fg=#e6e6e6 bg=#181a20
11   0..1   fg=#e879c6 bg=#181a20
11   1..2   fg=#e6e6e6 bg=#181a20
11   2..3   fg=#e6e6e6 bg=#21242c
11   3..4   fg=#7aa2f7 bg=#21242c BOLD
11   4..5   fg=#e6e6e6 bg=#21242c
11   5..21  fg=#e6e6e6 bg=#21242c BOLD
11  21..44  fg=#e6e6e6 bg=#21242c
11  44..45  fg=#e6e6e6 bg=#181a20
12   0..1   fg=#e879c6 bg=#181a20
12   1..3   fg=#e6e6e6 bg=#181a20
12   3..8   fg=#7aa2f7 bg=#181a20 BOLD
12   8..9   fg=#e6e6e6 bg=#181a20
12   9..26  fg=#7f8492 bg=#181a20
12  26..45  fg=#e6e6e6 bg=#181a20
13   0..1   fg=#e879c6 bg=#181a20
13   1..45  fg=#e6e6e6 bg=#181a20
14   0..45  fg=#e6e6e6 bg=#111216
15   0..45  fg=#e6e6e6 bg=#111216
